remove unnecessary folders, files, related codes & updated configs
- removed form_modules, design & docs folder
- removed form-application.js & form-config.js
- removed deleted folders & files related code
- moved bower config from cmd flag to bowerrc
- moved apikey.js to appropriate folder
- removed unnecessary & duplicate from gitignore, codeclimate.yml
- removed heroku related files (slugignore, app.json, procfile)
- removed pm2 related files (ecosystem.json, process.yml)
- removed jsdoc related files (conf.json)
- removed vagrant related files (vagrantfile)
- updated contributors, editorconfig, bower.json
