# app/controllers/users/users.password.server.controller.js
@@ -68,7 +68,7 @@ exports.forgot = function(req, res, next) {
 		},
 		function(token, user, done) {
 			res.render('templates/reset-password-email', {
-				name: user.displayName || 'TellForm User',
+				name: user.displayName || 'FormSG User',
 				appName: config.app.title,
 				url: 'http://' + req.headers.host + '/auth/reset/' + token
 			}, function(err, emailHTML) {
